examples/utils/core/error/src/main.cpp
/**
 * @file main.cpp
 * @author fs
 * @date 29.08.2024
 * @copyright Copyright (C) querdenker engineering GmbH - All Rights Reserved.
 *            For detailed information, read the license file in
 *            the project root directory.
 */

#include <app.h>

int main()
{
	app::App app;
	app.start();
	return 0;
}
